--- a/templates/public_main_page/index.html.twig
+++ b/templates/public_main_page/index.html.twig
@@ -60,7 +60,7 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarsExample04">
                                 <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item"><a class="nav-link" href="{{ path('public_main_page') }}"></a></li>
+                                    <li class="nav-item"><a class="nav-link" href="{{ path('public_main_page') }}">Home</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                                 </ul>
