--- a/templates/public_main_page/index.html.twig
+++ b/templates/public_main_page/index.html.twig
@@ -215,7 +215,7 @@
                             <input class="form_contril" placeholder="Email" type="text" name="fromEmail" />
                         </div>
                         <div class="col-md-12">
-                            <textarea class="textarea" placeholder="Message" type="text" name="message"></textarea>
+                            <textarea class="textarea" placeholder="Message" type="text" name="message" style="height: 300px !important;"></textarea>
                         </div>
                         <div class="col-sm-12">
                             <button class="send_btn" id="sendContactForm">Send</button>
