--- a/templates/contact_message/email.html.twig
+++ b/templates/contact_message/email.html.twig
@@ -120,7 +120,7 @@
                             <tbody>
                             <tr>
                                 <td style="font-family:'Open Sans', Arial, sans-serif; font-size:12px; line-height:15px; color:#0d1121;" valign="top" align="center">
-                                    New message from contact received
+                                    New message from contact main page received
                                 </td>
                             </tr>
                             </tbody>
@@ -149,7 +149,7 @@
                         <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                             <tbody><tr>
                                 <td style="font-family:'Open Sans', Arial, sans-serif; font-size:16px; line-height:30px; color:#ffffff;" valign="top" align="center">
-                                    Message from {{ contactMessage.fromName }}:<br/>
+                                    From {{ contactMessage.fromName }}<br/>
 
                                 </td>
                             </tr>
@@ -158,8 +158,8 @@
                                 <!--—this is space of 15px to separate two paragraphs ---->
                             </tr>
                             <tr>
-                                <td style="font-family:'Open Sans', Arial, sans-serif; font-size:18px; line-height:22px; color:#fbeb59; letter-spacing:2px; padding-bottom:12px;" valign="top" align="center">
-                                    {{ contactMessage.message }}
+                                <td style="font-family:'Open Sans', Arial, sans-serif; font-size:18px; line-height:22px; color:white; letter-spacing:2px; padding-bottom:12px;" valign="top" align="left">
+                                    {{ contactMessage.message | nl2br }}
                                 </td>
                             </tr>
                             <tr>
@@ -167,9 +167,9 @@
                                 <!--—this is space of 25px to separate two paragraphs ---->
                             </tr>
                             <tr>
-                                <td style="font-family:'Open Sans', Arial, sans-serif; font-size:18px; line-height:22px; color:#fbeb59; text-transform:uppercase; letter-spacing:2px; padding-bottom:12px;" valign="top" align="center">
-                                    Email [{{ contactMessage.fromEmail }}]<br/>
-                                    Phone [{{  contactMessage.fromPhoneNumber }}]
+                                <td style="font-family:'Open Sans', Arial, sans-serif; font-size:12px; line-height:22px; color:#b5fbd3;" valign="top" align="left">
+                                    Email: [{{ contactMessage.fromEmail }}]<br/>
+                                    Phone: [{{  contactMessage.fromPhoneNumber }}]
                                 </td>
                             </tr>
                             </tbody>
